syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "common.proto";

package queryClientService;

option java_package = "ar.edu.itba.pod.grpc.queryClientService";
option java_outer_classname = "QueryClientServiceModel";
option java_multiple_files = true;

service QueryClientService{
  rpc GetRooms(google.protobuf.StringValue) returns (stream common.AttentionResponse );
  rpc GetPatients(google.protobuf.StringValue) returns (stream common.Patient);
  rpc GetAttentions(google.protobuf.StringValue) returns (stream common.Attention);
}
